--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -13,11 +13,36 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.side-text a{
+  color: #fafafa;
+  font-size: 16px;
+  text-decoration: none;
+}
+.create-room{
+  border: 1px solid lightblue;
+  padding: 14px;
+}
+.create-room a{
+  font-size: 10px;
+  color: deepskyblue;
+  text-decoration: none;
 }
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+.room{
+  padding: 20px 0 40px;
+}
+.room-name a{
+  text-decoration: none;
+  color: white;
 }
 .chat-header {
   height: 100px;
