チャット画面のフロント実装」

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,32 @@
 <div class="chat-header">
+  <div class="chat-name">hugefuga</div>
+  <div class="chat-finish"><a href="#">チャットを終了する</a></div>
 </div>
 
 <div class="messages">
+  <div class="message">
+    <div class="message-detail">
+      <div class="message-name">Tom</div>
+      <div class="time">2020/3/31(Wed) 12:43:30</div>
+    </div>
+    <div class="info">おはよう</div>
+  </div>
+  <div class="message">
+    <div class="message-detail">
+      <div class="message-name">Ooh</div>
+      <div class="time">2023/5/20</div>
+    </div>
+    <div class="info">こんばんは</div>
+  </div>
 </div>
 
 <div class="form">
+  <div class="form-input">
+    <input placeholder="type a message" class="text">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input type="submit" value="送信" class="btn">
 </div>
