--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,7 @@
 <div class="side-bar-header">
-  <div class="side-text"><a href="#">Tom</a></div>
+  <div class="side-text">
+    <%= link_to current_user.name, edit_user_path(current_user) %>
+  </div>
   <div class="create-room"><a href="#">チャットを作成する</a></div>
 </div>
 
