--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -4,20 +4,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="message-detail">
-      <div class="message-name">Tom</div>
-      <div class="time">2020/3/31(Wed) 12:43:30</div>
-    </div>
-    <div class="info">おはよう</div>
-  </div>
-  <div class="message">
-    <div class="message-detail">
-      <div class="message-name">Ooh</div>
-      <div class="time">2023/5/20</div>
-    </div>
-    <div class="info">こんばんは</div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
@@ -28,5 +15,5 @@
       <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <%= f.submit '送信', class: 'form-submit' %>
+  <%= f.submit '送信', class: 'btn' %>
 <% end %>
