--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,7 @@
 <div class="chat-header">
-  <div class="chat-name">hugefuga</div>
+  <div class="chat-name">
+    <%= @room.name %>
+  </div>
   <div class="chat-finish"><a href="#">チャットを終了する</a></div>
 </div>
 
