--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -2,7 +2,9 @@
   <div class="chat-name">
     <%= @room.name %>
   </div>
-  <div class="chat-finish"><a href="#">チャットを終了する</a></div>
+  <div class="chat-finish">
+  <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
+  </div>
 </div>
 
 <div class="messages">
