--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,13 +1,17 @@
 <div class="message">
     <div class="message-detail">
       <div class="message-name">
+      <!-- 投稿したユーザー名情報を出力する -->
         <%= message.user.name %>
       </div>
       <div class="time">
         <%= l message.created_at %>
       </div>
     </div>
-    <div class="info">
-      <%= message.content %>
+    <div class="lower-message">
+      <div class="info">
+        <%= message.content %>
+      </div>
+      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
     </div>
-  </div>
+</div>
